--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -6,10 +6,13 @@ dependencies:
     - entity_browser.browser.assets_browser
     - field.field.node.event.body
     - field.field.node.event.field_address
+    - field.field.node.event.field_argumentaires
+    - field.field.node.event.field_bloc
     - field.field.node.event.field_date
     - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
+    - field.field.node.event.field_informations
     - field.field.node.event.field_je_m_informe
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
@@ -42,6 +45,24 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textfield
+    region: content
+  field_argumentaires:
+    weight: 26
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_bloc:
+    weight: 28
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
     region: content
   field_date:
     weight: 2
@@ -96,6 +117,14 @@ content:
       open: false
       field_widget_display_settings: {  }
     third_party_settings: {  }
+  field_informations:
+    weight: 27
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
   field_place:
     weight: 10
     settings:
