Modules views_bootstrap and webform added.

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
         "drupal/pathauto": "^1.2",
         "drupal/single_datetime": "^1.6",
         "drupal/video_embed_field": "^2.0",
+        "drupal/views_bootstrap": "^3.0",
         "drupal/views_geojson": "1.x-dev",
+        "drupal/webform": "^5.0@RC",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
