--- a/config/sync/views.view.events.yml
+++ b/config/sync/views.view.events.yml
@@ -759,9 +759,9 @@ display:
         - 'config:field.storage.node.field_event_type'
         - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_place'
-  page_1:
+  page_events:
     display_plugin: page
-    id: page_1
+    id: page_events
     display_title: Page
     position: 1
     display_options:
