--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -123,7 +123,7 @@ content:
       field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
-      selection_mode: selection_append
+      selection_mode: selection_prepend
       field_widget_replace: false
       open: false
       field_widget_display_settings: {  }
