--- a/config/sync/field.field.node.event.field_image.yml
+++ b/config/sync/field.field.node.event.field_image.yml
@@ -11,7 +11,7 @@ field_name: field_image
 entity_type: node
 bundle: event
 label: Image
-description: "\r\n"
+description: ''
 required: true
 translatable: false
 default_value: {  }
@@ -22,8 +22,7 @@ settings:
     target_bundles:
       image: image
     sort:
-      field: field_media_image.title
-      direction: ASC
+      field: _none
     auto_create: false
     auto_create_bundle: ''
 field_type: entity_reference
