--- a/config/sync/user.role.contributor.yml
+++ b/config/sync/user.role.contributor.yml
@@ -8,21 +8,40 @@ weight: -8
 is_admin: null
 permissions:
   - 'access administration pages'
+  - 'access assets_browser entity browser pages'
   - 'access content overview'
   - 'access contextual links'
+  - 'access file_browser entity browser pages'
+  - 'access files overview'
   - 'access in-place editing'
+  - 'access media overview'
   - 'access toolbar'
   - 'administer nodes'
   - 'create article content'
+  - 'create audio media'
   - 'create event content'
+  - 'create file media'
+  - 'create image media'
+  - 'create media'
   - 'create page content'
+  - 'create video_embed media'
   - 'delete article revisions'
+  - 'delete media'
   - 'delete own article content'
+  - 'delete own audio media'
   - 'delete own event content'
+  - 'delete own file media'
+  - 'delete own image media'
+  - 'delete own video_embed media'
   - 'edit own article content'
+  - 'edit own audio media'
   - 'edit own event content'
+  - 'edit own file media'
+  - 'edit own image media'
   - 'edit own page content'
+  - 'edit own video_embed media'
   - 'revert article revisions'
+  - 'update media'
   - 'use editorial transition create_new_draft'
   - 'use editorial transition demande_de_validation'
   - 'use editorial transition demander_une_validation'
