--- a/config/sync/user.role.moderator.yml
+++ b/config/sync/user.role.moderator.yml
@@ -8,22 +8,51 @@ weight: -7
 is_admin: null
 permissions:
   - 'access administration pages'
+  - 'access assets_browser entity browser pages'
   - 'access content overview'
   - 'access contextual links'
+  - 'access file_browser entity browser pages'
+  - 'access files overview'
   - 'access in-place editing'
+  - 'access media overview'
   - 'access toolbar'
   - 'administer nodes'
   - 'create article content'
+  - 'create audio media'
   - 'create event content'
+  - 'create file media'
+  - 'create image media'
+  - 'create media'
   - 'create page content'
+  - 'create video_embed media'
   - 'delete any article content'
+  - 'delete any audio media'
   - 'delete any event content'
+  - 'delete any file media'
+  - 'delete any image media'
+  - 'delete any media'
+  - 'delete any video_embed media'
+  - 'delete media'
   - 'delete own article content'
+  - 'delete own audio media'
   - 'delete own event content'
+  - 'delete own file media'
+  - 'delete own image media'
+  - 'delete own video_embed media'
+  - 'edit any audio media'
   - 'edit any event content'
+  - 'edit any file media'
+  - 'edit any image media'
+  - 'edit any video_embed media'
   - 'edit own article content'
+  - 'edit own audio media'
   - 'edit own event content'
+  - 'edit own file media'
+  - 'edit own image media'
   - 'edit own page content'
+  - 'edit own video_embed media'
+  - 'update any media'
+  - 'update media'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
