--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,8 @@
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/metatag": "^1.5",
         "drupal/pathauto": "^1.2",
+        "drupal/rules": "^3.0@alpha",
+        "drupal/rules_role_email": "^1.0@alpha",
         "drupal/single_datetime": "^1.6",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_bootstrap": "^3.0",
