--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -55,6 +55,8 @@ module:
   rdf: 0
   responsive_image: 0
   rest: 0
+  rules: 0
+  rules_role_email: 0
   search: 0
   serialization: 0
   shortcut: 0
@@ -65,6 +67,7 @@ module:
   token: 0
   toolbar: 0
   tour: 0
+  typed_data: 0
   update: 0
   user: 0
   video_embed_field: 0
