--- a/config/sync/core.entity_view_display.node.argumentaire.default.yml
+++ b/config/sync/core.entity_view_display.node.argumentaire.default.yml
@@ -5,9 +5,11 @@ dependencies:
   config:
     - field.field.node.argumentaire.body
     - field.field.node.argumentaire.field_image
+    - field.field.node.argumentaire.field_release_date
     - field.field.node.argumentaire.field_thematique
     - node.type.argumentaire
   module:
+    - datetime_range
     - ds
     - text
     - user
@@ -52,6 +54,16 @@ content:
     third_party_settings: {  }
     type: entity_reference_entity_view
     region: ds_content
+  field_release_date:
+    weight: 2
+    label: above
+    settings:
+      separator: '-'
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: daterange_default
+    region: content
 hidden:
   field_thematique: true
   langcode: true
