--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -47,6 +47,9 @@ module:
   locale: 0
   media: 0
   menu_ui: 0
+  migrate: 0
+  migrate_plus: 0
+  migrate_tools: 0
   node: 0
   options: 0
   page_cache: 0
