--- a/config/sync/migrate_plus.migration.ensemble_dc_article.yml
+++ b/config/sync/migrate_plus.migration.ensemble_dc_article.yml
@@ -1,9 +1,9 @@
-uuid: 8ea231e0-f471-4f65-bec4-c0f8fbd07c03
+uuid: a0fb7179-90d6-4b32-b43a-f92513c74f2b
 langcode: fr
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: wkBHlKyLowgDEogrlYk1ySxFUWTy7a1WdEWDTzL_Rcg
+  default_config_hash: MbMDak8oOSv1XnztB_fHhP6IcqQIUES_lxY0ZElXmMI
 id: ensemble_dc_article
 class: null
 field_plugin_method: null
@@ -20,8 +20,8 @@ process:
   body/format:
     plugin: default_value
     default_value: full_html
-  body/value: post_content
-  body/summary: post_excerpt
+  body/value: post_content_xhtml
+  body/summary: post_excerpt_xhtml
   field_thematique:
     plugin: migration_lookup
     migration: ensemble_dc_thematique
