Config exported to improve entity browser via ckeditor.

--- a/config/sync/entity_browser.browser.assets_browser.yml
+++ b/config/sync/entity_browser.browser.assets_browser.yml
@@ -16,7 +16,7 @@ display_configuration:
   auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
-widget_selector: tabs
+widget_selector: single
 widget_selector_configuration: {  }
 widgets:
   86a5922d-42cd-48d0-8aaf-ccfccd12765c:
@@ -27,7 +27,7 @@ widgets:
       multiple: '1'
       submit_text: 'Sélectionner des fichiers'
     uuid: 86a5922d-42cd-48d0-8aaf-ccfccd12765c
-    weight: 1
+    weight: -9
     label: 'Upload images'
     id: media_image_upload
   1de4e6e3-8890-49c2-a62c-84a0398fd0f8:
@@ -37,6 +37,6 @@ widgets:
       submit_text: 'Sélectionner les entités'
       auto_select: false
     uuid: 1de4e6e3-8890-49c2-a62c-84a0398fd0f8
-    weight: 2
+    weight: -10
     label: view
     id: view
