monthevents.js added in theme and library to manage next and previous month with js.

--- a/web/themes/contrib/ensemble/less/ensemble.libraries.yml
+++ b/web/themes/contrib/ensemble/less/ensemble.libraries.yml
@@ -62,3 +62,9 @@ managedates:
     js/managedates/managedates.js: {}
   dependencies:
       - core/jquery
+
+monthevents:
+  js:
+    js/managedates/monthevents.js: {}
+  dependencies:
+      - core/jquery
