Module and core up and worflows out.

--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -13,7 +13,6 @@ dependencies:
     - field.field.node.article.field_thematique
     - node.type.article
   module:
-    - content_moderation
     - datetime_range
     - entity_browser
     - path
@@ -102,11 +101,13 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 128
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 30
