--- a/config/sync/views.view.moderated_content.yml
+++ b/config/sync/views.view.moderated_content.yml
@@ -1,4 +1,4 @@
-uuid: 79ab3a1c-f828-4bda-9314-b93223e6bc35
+uuid: b9da4cb5-9546-4940-b4e2-9094c6718da1
 langcode: fr
 status: true
 dependencies:
@@ -11,9 +11,9 @@ dependencies:
 _core:
   default_config_hash: 1UIjNd6iIhogbx50cJPDN7Me8cUQx2xCP2IBgrKG6Ms
 id: moderated_content
-label: 'Contenu modéré'
+label: 'Moderated content'
 module: views
-description: 'Trouver et modérer du contenu.'
+description: 'Find and moderate content.'
 tag: ''
 base_table: node_field_revision
 base_field: vid
@@ -201,7 +201,7 @@ display:
           relationship: nid
           group_type: group
           admin_label: ''
-          label: 'Type de contenu'
+          label: 'Content type'
           exclude: false
           alter:
             alter_text: false
@@ -331,7 +331,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'État de modération'
+          label: 'Moderation state'
           exclude: false
           alter:
             alter_text: false
@@ -596,7 +596,7 @@ display:
           exposed: true
           expose:
             operator_id: type_op
-            label: 'Type de contenu'
+            label: 'Content type'
             description: ''
             use_operator: false
             operator: type_op
@@ -639,7 +639,7 @@ display:
           exposed: true
           expose:
             operator_id: moderation_state_op
-            label: 'État de modération'
+            label: 'Moderation state'
             description: ''
             use_operator: false
             operator: moderation_state_op
@@ -747,7 +747,7 @@ display:
           entity_type: node
           plugin_id: moderation_state_filter
       sorts: {  }
-      title: 'Contenu modéré'
+      title: 'Moderated content'
       header: {  }
       footer: {  }
       empty:
@@ -805,7 +805,7 @@ display:
   moderated_content:
     display_plugin: page
     id: moderated_content
-    display_title: 'Contenu modéré'
+    display_title: 'Moderated content'
     position: 1
     display_options:
       display_extenders: {  }
