--- a/config/sync/webform.webform.demo_event_registration.yml
+++ b/config/sync/webform.webform.demo_event_registration.yml
@@ -1,4 +1,3 @@
-uuid: 5d6b5acc-ddcc-4864-8af8-d34af0ef4e7e
 langcode: fr
 status: open
 dependencies:
@@ -7,10 +6,9 @@ dependencies:
       - webform_demo_event_registration
   module:
     - webform_scheduled_email
-_core:
-  default_config_hash: rrcIkPLMtadHGiuu56xz53DVaaEmnXNokFOONbqDfdg
 open: null
 close: null
+weight: 0
 uid: null
 template: false
 archive: false
@@ -49,14 +47,21 @@ settings:
   form_submit_back: false
   form_autofocus: false
   form_details_toggle: false
-  form_login: false
-  form_login_message: ''
+  form_access_denied: default
+  form_access_denied_title: ''
+  form_access_denied_message: ''
+  form_access_denied_attributes: {  }
+  form_file_limit: ''
   submission_label: ''
   submission_log: true
+  submission_views: {  }
+  submission_views_replace: {  }
   submission_user_columns: {  }
   submission_user_duplicate: false
-  submission_login: false
-  submission_login_message: ''
+  submission_access_denied: default
+  submission_access_denied_title: ''
+  submission_access_denied_message: ''
+  submission_access_denied_attributes: {  }
   submission_exception_message: ''
   submission_locked_message: ''
   previous_submission_message: ''
@@ -67,7 +72,9 @@ settings:
   wizard_progress_bar: true
   wizard_progress_pages: false
   wizard_progress_percentage: false
+  wizard_progress_link: false
   wizard_start_label: ''
+  wizard_preview_link: false
   wizard_confirmation: true
   wizard_confirmation_label: ''
   wizard_track: ''
@@ -178,6 +185,7 @@ handlers:
       return_path: ''
       sender_mail: ''
       sender_name: ''
+      theme_name: ''
   email_reminder:
     id: scheduled_email
     label: 'Email Reminder'
@@ -211,9 +219,11 @@ handlers:
       return_path: ''
       sender_mail: ''
       sender_name: ''
+      theme_name: ''
       send: '[webform_submission:node:field_webform_demo_event_date:value]'
       days: -1
       unschedule: false
+      ignore_past: false
   submission_limit:
     id: settings
     label: 'Submission limit'
@@ -229,3 +239,6 @@ handlers:
       confirmation_message: ''
       debug: ''
       entity_limit_total: '[webform_submission:node:field_webform_entity_limit_total]'
+uuid: 5d6b5acc-ddcc-4864-8af8-d34af0ef4e7e
+_core:
+  default_config_hash: rrcIkPLMtadHGiuu56xz53DVaaEmnXNokFOONbqDfdg
