--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "platform": {"php": "5.6"}
     },
     "autoload": {
         "classmap": [
