--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -8,7 +8,6 @@ dependencies:
     - image.style.thumbnail
     - media.type.image
   module:
-    - content_moderation
     - image_widget_crop
     - path
 _core:
@@ -59,11 +58,13 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    type: moderation_state_default
-    weight: 7
-    settings: {  }
-    region: content
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 0
