--- a/config/sync/core.entity_form_display.media.video.default.yml
+++ b/config/sync/core.entity_form_display.media.video.default.yml
@@ -1,18 +1,19 @@
-uuid: fe90ab87-854e-44ba-b362-23fee7ff5933
+uuid: 2009ab2f-ad10-4342-8bde-e07cd974b617
 langcode: fr
 status: true
 dependencies:
   config:
-    - field.field.media.audio.field_media_audio_file
-    - media.type.audio
+    - field.field.media.video.field_media_video_file
+    - media.type.video
   module:
+    - content_moderation
     - file
     - path
 _core:
-  default_config_hash: RyyyRmiREZqnypsWhFFLYjMH0WRej2Pe8-H-8wh1o-Q
-id: media.audio.default
+  default_config_hash: 5JEUDM5D29_PQUaaFfUguu-uK9yCIBey2iY-Z4NTja4
+id: media.video.default
 targetEntityType: media
-bundle: audio
+bundle: video
 mode: default
 content:
   created:
@@ -21,7 +22,7 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_media_audio_file:
+  field_media_video_file:
     weight: 0
     settings:
       progress_indicator: throbber
@@ -36,13 +37,11 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    weight: 101
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
     region: content
+    third_party_settings: {  }
   name:
     type: string_textfield
     weight: -5
