--- a/config/sync/core.entity_form_display.media.video_embed.default.yml
+++ b/config/sync/core.entity_form_display.media.video_embed.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - field.field.media.video_embed.field_tag_media
     - media.type.video_embed
   module:
-    - content_moderation
     - path
     - video_embed_field
 id: media.video_embed.default
@@ -44,11 +43,13 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    type: moderation_state_default
-    weight: 7
-    settings: {  }
-    region: content
+    weight: 26
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
     weight: 0
