--- a/config/sync/core.entity_form_display.node.argumentaire.default.yml
+++ b/config/sync/core.entity_form_display.node.argumentaire.default.yml
@@ -10,7 +10,6 @@ dependencies:
     - field.field.node.argumentaire.field_thematique
     - node.type.argumentaire
   module:
-    - content_moderation
     - datetime_range
     - entity_browser
     - path
@@ -72,11 +71,13 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 125
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 30
