--- a/config/sync/core.entity_form_display.node.webform_demo_event.default.yml
+++ b/config/sync/core.entity_form_display.node.webform_demo_event.default.yml
@@ -9,7 +9,6 @@ dependencies:
     - field.field.node.webform_demo_event.webform
     - node.type.webform_demo_event
   module:
-    - content_moderation
     - datetime
     - path
     - text
@@ -57,11 +56,13 @@ content:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
-    type: moderation_state_default
-    weight: 100
-    settings: {  }
-    region: content
+    weight: 101
+    settings:
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   path:
     type: path
     weight: 9
