--- a/config/sync/core.entity_view_display.node.event.full.yml
+++ b/config/sync/core.entity_view_display.node.event.full.yml
@@ -1,23 +1,74 @@
 uuid: 07bcb9b5-4070-4f21-9f31-6441588e6dce
 langcode: fr
-status: false
+status: true
 dependencies:
   config:
     - core.entity_view_mode.node.full
     - field.field.node.event.body
     - field.field.node.event.field_address
+    - field.field.node.event.field_argumentaires
+    - field.field.node.event.field_bloc
+    - field.field.node.event.field_bloc_incitation
     - field.field.node.event.field_date
+    - field.field.node.event.field_document
     - field.field.node.event.field_event_type
     - field.field.node.event.field_image
+    - field.field.node.event.field_inscription
+    - field.field.node.event.field_link_info_go
     - field.field.node.event.field_place
     - field.field.node.event.field_release_date
     - node.type.event
   module:
     - datetime
+    - ds
     - geofield_map
     - taxonomy
     - text
     - user
+    - webform
+third_party_settings:
+  ds:
+    layout:
+      id: ds_2col_stacked
+      library: ds/ds_2col_stacked
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          header: div
+          left: div
+          right: div
+          footer: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      header:
+        - node_title
+        - field_event_type
+      left:
+        - field_image
+        - body
+      right:
+        - field_link_info_go
+        - field_date
+        - field_address
+        - field_document
+        - field_place
+      footer:
+        - field_bloc_incitation
+        - field_bloc
+        - field_argumentaires
+        - field_inscription
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
 id: node.event.full
 targetEntityType: node
 bundle: event
@@ -26,45 +77,99 @@ content:
   body:
     label: hidden
     type: text_default
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
-    region: content
+    region: left
   field_address:
-    weight: 3
+    weight: 6
     label: inline
     settings: {  }
     third_party_settings: {  }
     type: text_default
-    region: content
+    region: right
+  field_argumentaires:
+    type: entity_reference_label
+    weight: 11
+    region: footer
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_bloc:
+    type: entity_reference_entity_view
+    weight: 10
+    region: footer
+    label: hidden
+    settings:
+      link: true
+      view_mode: default
+    third_party_settings: {  }
+  field_bloc_incitation:
+    type: entity_reference_entity_view
+    weight: 9
+    region: footer
+    label: hidden
+    settings:
+      link: true
+      view_mode: default
+    third_party_settings: {  }
   field_date:
-    weight: 4
+    weight: 5
     label: inline
     settings:
       timezone_override: ''
+      date_format: 'd F Y - H:i'
+    third_party_settings:
+      ds:
+        ds_limit: ''
+    type: datetime_custom
+    region: right
+  field_document:
+    type: entity_reference_label
+    weight: 7
+    region: right
+    label: above
+    settings:
+      link: true
     third_party_settings: {  }
-    type: datetime_plain
-    region: content
   field_event_type:
-    weight: 5
-    label: inline
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: entity_reference_rss_category
-    region: content
+    region: header
   field_image:
     type: entity_reference_entity_view
-    weight: 0
+    weight: 2
+    region: left
     label: hidden
     settings:
-      view_mode: full
+      view_mode: bandeau
       link: false
     third_party_settings: {  }
-    region: content
+  field_inscription:
+    type: webform_entity_reference_entity_view
+    weight: 12
+    region: footer
+    label: hidden
+    settings:
+      source_entity: true
+    third_party_settings: {  }
+  field_link_info_go:
+    type: entity_reference_entity_view
+    weight: 4
+    region: right
+    label: visually_hidden
+    settings:
+      link: true
+      view_mode: default
+    third_party_settings: {  }
   field_place:
     type: geofield_google_map
-    weight: 6
-    region: content
+    weight: 8
+    region: right
     label: hidden
     settings:
       map_dimensions:
