--- a/config/sync/crop.type.headband_thin.yml
+++ b/config/sync/crop.type.headband_thin.yml
@@ -2,11 +2,11 @@ uuid: 724fdcae-86ea-4bd2-ae05-755b0ecd3054
 langcode: fr
 status: true
 dependencies: {  }
-label: 'bandeau fin (1140/100)'
+label: 'Haut événement (768x331)'
 id: headband_thin
-description: 1140/100
-aspect_ratio: '12:1'
-soft_limit_width: 1200
-soft_limit_height: 100
-hard_limit_width: 1200
-hard_limit_height: 100
+description: 768x331
+aspect_ratio: '768:331'
+soft_limit_width: 768
+soft_limit_height: 331
+hard_limit_width: 768
+hard_limit_height: 331
